--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 sudo: false
+addons:
+  sonarcloud:
+    token: ${SONAR_TOKEN}
 jdk:
   - openjdk8
   - openjdk11
 languaje: java
-script: mvn test -f ejemplomavenIC/pom.xml
+script: 
+  -mvn test -f ejemplomavenIC/pom.xml
+  -sonar-scanner -Dsonar.login=${SONAR_TOKEN}
