--- a/ejemplomavenIC/pom.xml
+++ b/ejemplomavenIC/pom.xml
@@ -24,5 +24,15 @@
 
 
 	</dependencies>
-
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.0.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
